# arborium

./: .gitattributes  .gitignore  CNAME  Cargo.toml  GRAMMARS.toml  LICENSE-APACHE  LICENSE-MIT  LICENSES.md  MIGRATION.md  PUBLISH.md  README.md  README.template.md  generate.md  index.html  justfile  migrate-crates.js  migration-summary.js  plugins.json  registry.json
.github/docker/: Dockerfile.plugin-builder
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  release.yml
crates/arborium/: Cargo.toml  build.rs
crates/arborium-ada/: Cargo.toml  build.rs  info.toml
crates/arborium-agda/: Cargo.toml  build.rs
crates/arborium-asciidoc/: build.rs
crates/arborium-asciidoc_inline/: build.rs
crates/arborium-asm/: Cargo.toml  build.rs
crates/arborium-awk/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-bash/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-batch/: Cargo.toml  build.rs
crates/arborium-c/: Cargo.toml  build.rs
crates/arborium-c-sharp/: Cargo.toml  build.rs  info.toml
crates/arborium-caddy/: Cargo.toml  build.rs
crates/arborium-capnp/: Cargo.toml  build.rs
crates/arborium-cli/: Cargo.toml
crates/arborium-clojure/: Cargo.toml  build.rs  info.toml
crates/arborium-cmake/: Cargo.toml  build.rs
crates/arborium-commonlisp/: Cargo.toml  build.rs
crates/arborium-cpp/: Cargo.toml  arborium.kdl  build.rs  info.toml
crates/arborium-css/: Cargo.toml  build.rs  info.toml
crates/arborium-d/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-dart/: Cargo.toml  build.rs  info.toml
crates/arborium-devicetree/: Cargo.toml  build.rs  info.toml
crates/arborium-diff/: Cargo.toml  build.rs
crates/arborium-dockerfile/: Cargo.toml  build.rs  info.toml
crates/arborium-docsrs-demo/: Cargo.toml  README.md  arborium-header.html
crates/arborium-dot/: Cargo.toml  build.rs
crates/arborium-elisp/: Cargo.toml  build.rs
crates/arborium-elixir/: Cargo.toml  build.rs  info.toml
crates/arborium-elm/: Cargo.toml  build.rs  info.toml
crates/arborium-erlang/: Cargo.toml  build.rs
crates/arborium-fish/: Cargo.toml  build.rs
crates/arborium-fsharp/: Cargo.toml  arborium.kdl  build.rs  info.toml
crates/arborium-gleam/: Cargo.toml  build.rs  info.toml
crates/arborium-glsl/: Cargo.toml  build.rs  info.toml
crates/arborium-go/: Cargo.toml  build.rs
crates/arborium-graphql/: Cargo.toml  build.rs
crates/arborium-haskell/: Cargo.toml  build.rs
crates/arborium-hcl/: Cargo.toml  build.rs  info.toml
crates/arborium-highlight/: Cargo.toml  README.md
crates/arborium-highlight/src/: lib.rs  render.rs  tree_sitter.rs  types.rs
crates/arborium-hlsl/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-host/: Cargo.toml
crates/arborium-html/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-hyprlang/: Cargo.toml  build.rs
crates/arborium-idris/: Cargo.toml  build.rs
crates/arborium-ini/: Cargo.toml  build.rs
crates/arborium-java/: Cargo.toml  build.rs
crates/arborium-javascript/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-jinja2/: Cargo.toml  build.rs
crates/arborium-jq/: Cargo.toml  build.rs  info.toml
crates/arborium-json/: Cargo.toml  build.rs
crates/arborium-julia/: Cargo.toml  build.rs
crates/arborium-kdl/: Cargo.toml  build.rs
crates/arborium-kotlin/: arborium.kdl  build.rs
crates/arborium-lean/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-lua/: Cargo.toml  build.rs  info.toml
crates/arborium-markdown/: build.rs
crates/arborium-markdown-inline/: arborium.kdl  build.rs
crates/arborium-matlab/: Cargo.toml  build.rs
crates/arborium-meson/: Cargo.toml  build.rs
crates/arborium-nginx/: Cargo.toml  build.rs  info.toml
crates/arborium-ninja/: Cargo.toml  build.rs
crates/arborium-nix/: Cargo.toml  build.rs
crates/arborium-objc/: Cargo.toml  build.rs
crates/arborium-ocaml/: build.rs
crates/arborium-perl/: Cargo.toml  build.rs
crates/arborium-php/: Cargo.toml  build.rs  info.toml
crates/arborium-plugin-runtime/: Cargo.toml
crates/arborium-postscript/: build.rs
crates/arborium-powershell/: build.rs
crates/arborium-prolog/: build.rs
crates/arborium-python/: Cargo.toml  build.rs
crates/arborium-query/: Cargo.toml  build.rs
crates/arborium-r/: Cargo.toml  build.rs
crates/arborium-rescript/: build.rs
crates/arborium-ron/: Cargo.toml  build.rs
crates/arborium-ruby/: Cargo.toml  build.rs
crates/arborium-rust/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-rustdoc/: Cargo.toml
crates/arborium-scala/: Cargo.toml  build.rs
crates/arborium-scheme/: build.rs
crates/arborium-scss/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-sparql/: Cargo.toml  build.rs
crates/arborium-sql/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-ssh-config/: Cargo.toml  build.rs
crates/arborium-starlark/: build.rs  (+2 more)
crates/arborium-test-harness/: Cargo.toml  README.md
crates/arborium-test-harness/src/: lib.rs
crates/arborium/examples/: ansi_showcase.rs
crates/arborium/src/: advanced.rs  ansi.rs  error.rs  highlighter.rs  html.rs  lib.rs  store.rs  stubs.c  wasm.rs
crates/arborium/tests/: html.rs  language.rs  svelte.rs  vue.rs
demo/: .icon-cache.json  Cargo.toml  app.js  index.html  index.stpl.html  language-info.json  plugins.json  registry.json  styles.css  template.html
demo/examples/: php.php  ruby.rb  scss.scss  sql.sql  toml.toml  typescript.ts  vb.vb  x86asm.asm  xml.xml  yaml.yaml  zig.zig
demo/pkg/: app.generated.js  host.core.wasm  host.core3.wasm  host.core4.wasm  host.js  host.wasm
demo/samples/: kdl.kdl
demo/src/: lib.rs
langs/: Cargo.toml  plugins.json
pkg/: README.md  app.generated.js  arborium.iife.js  arborium.iife.js.map  arborium.js  arborium_host.d.ts  arborium_host.js  arborium_host_bg.wasm  arborium_host_bg.wasm.d.ts  package.json  themes.generated.css
samples/: batch.bat
tree-sitter/: Cargo.toml
tree-sitter-highlight/: Cargo.toml
tree-sitter-highlight/src/: c_lib.rs  lib.rs
tree-sitter-starlark/: grammar.js
tree-sitter-zsh/: grammar.js
wasm-sysroot/: BUCK  stdint.h
wit/: host.wit
xtask/: Cargo.toml
(+229 files in other folders)
