[package]
name = "arborium-demo"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arborium = { path = "../crates/arborium", features = ["wasm-fix", "all-languages"] }
wasm-bindgen = "0.2"
