[package]
name = "tree-sitter-highlight-patched-arborium"
version = "0.25.10"
description = "Library for performing syntax highlighting with Tree-sitter (vendored for arborium WASM support)"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Tim Clem <timothy.clem@gmail.com>",
]
edition = "2021"
rust-version = "1.76"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tree-sitter/tree-sitter"
keywords = ["incremental", "parsing", "syntax", "highlighting"]
categories = ["parsing", "text-editors"]
publish = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
regex = "1.11.1"
thiserror = "2"
streaming-iterator = "0.1.9"
tree-sitter-patched-arborium = { version = "0.25.10", path = "../tree-sitter" }
