[package]
name = "arborium-highlight"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Unified syntax highlighting for arborium - works with both static Rust grammars and WASM plugins"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bearcove/arborium"
homepage = "https://github.com/bearcove/arborium"
documentation = "https://docs.rs/arborium-highlight"
keywords = ["syntax-highlighting", "tree-sitter", "wasm"]
categories = ["text-processing"]

[dependencies]
arborium-theme = { path = "../arborium-theme" }
