[package]
name = "arborium-test-harness"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Test harness for arborium grammar crates"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bearcove/arborium"
homepage = "https://github.com/bearcove/arborium"
documentation = "https://docs.rs/arborium-test-harness"
keywords = ["syntax-highlighting", "tree-sitter", "testing"]
categories = ["development-tools::testing"]

[dependencies]
tree-sitter-patched-arborium = { version = "0.25.10", path = "../../tree-sitter" }
tree-sitter-highlight-patched-arborium = { version = "0.25.10", path = "../../tree-sitter-highlight" }
arborium-theme = { path = "../arborium-theme" }
