[package]
name = "arborium"
version = "1.2.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/arborium"
description = "Tree-sitter syntax highlighting with HTML rendering and WASM support"
keywords = ["tree-sitter", "syntax-highlighting", "wasm"]
categories = ["parsing", "text-processing", "wasm"]
links = "arborium"

[features]
default = []

# All languages
all-languages = [
    "lang-glsl",
]

# Individual language features
lang-glsl = ["dep:arborium-glsl"]

[dependencies]
tree-sitter-patched-arborium = { path = "../../tree-sitter" }
arborium-theme = { path = "../arborium-theme" }
arborium-highlight = { path = "../arborium-highlight", features = ["tree-sitter"] }

# Optional grammar dependencies
arborium-glsl = { path = "../../langs/group-moss/glsl/crate", optional = true }

[dev-dependencies]
indoc = "2"

# WASM allocator (automatically enabled on wasm targets)
[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = "0.2"
